--- a/src/components/AccountBar/accountbar.css
+++ b/src/components/AccountBar/accountbar.css
@@ -57,3 +57,9 @@
     background-size: 100% 1px;
     transition: .3s;
 }
+
+@media screen and (max-width: 850px) {
+    .account-button {
+        display: none;
+    }
+}
