--- a/src/components/AuthForm/authform.css
+++ b/src/components/AuthForm/authform.css
@@ -1,5 +1,5 @@
 .authform {
-    width: 396px;
+    max-width: 396px;
     margin: 52px auto 0;
     min-height: 630px;
     display: flex;
@@ -18,6 +18,7 @@
     background-color: #000;
     color: #fff;
     border: none;
+    border-radius: 3px;
     margin: auto 0 0;
     font-size: 14px;
     line-height: 121%;
@@ -54,4 +55,12 @@
 .authform__bottomtext-link:hover {
     background-size: 100% 1px;
     transition: .3s;
+}
+
+@media screen and (max-width: 450px) {
+    .authform {
+        max-width: 396px;
+        align-items: center;
+        margin: 52px 30px 0;
+    }
 }
