--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -24,8 +24,17 @@
 
 .footer__menu {
     margin: auto 0 auto auto;
-    list-style: none;
+}
+
+.footer__menu-list {
     display: flex;
+    list-style: none;
+    padding: 0;
+}
+
+.footer__menu-item {
+    list-style: none;
+    padding: 0;
 }
 
 .footer__menu-item-link {
@@ -77,6 +86,9 @@
 
     .footer__menu {
         margin: 30px auto;
+    }
+
+    .footer__menu-list {
         flex-direction: column;
         text-align: center;
     }
