--- a/src/components/MoviesCard/moviescard.css
+++ b/src/components/MoviesCard/moviescard.css
@@ -23,6 +23,7 @@
     line-height: 121%;
     padding: 14px 0 0;
     margin: 0;
+    
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
@@ -42,6 +43,7 @@
     margin: 0 auto 0 0;
     width: 30px;
     height: 30px;
+    border: none;
     border-radius: 50%;
     background-color: #F9F9F9;
     background-image: url(../../images/button-icon.svg);
@@ -52,6 +54,10 @@
     cursor: pointer;
 }
 
+.card__button_type_delete {
+    background-image: url(../../images/exit-button.png);
+}
+
 .card__button:hover {
     /* background-color: #949494; */
     box-shadow: 0px 0px 3px 0 rgba(0, 0, 0, 0.8);
@@ -60,6 +66,7 @@
 
 .card__button_selected {
     background-color: rgba(0,0,0,1);
+    background-image: url(../../images/button-icon-saved.svg);
 }
 
 .card__image-container {
