--- a/src/components/MoviesCardList/moviescardlist.css
+++ b/src/components/MoviesCardList/moviescardlist.css
@@ -47,3 +47,9 @@
         margin: 0 10px 0;
     }
 }
+
+@media screen and (max-width: 360px) {
+    .cardlist__morebutton {
+        width: 100%;
+    }
+}
