--- a/src/components/AuthForm/authform.css
+++ b/src/components/AuthForm/authform.css
@@ -1,6 +1,7 @@
 .authform {
     max-width: 396px;
-    margin: 52px auto 0;
+    margin: 0 auto;
+    padding: 52px 0 0;
     min-height: 630px;
     display: flex;
     flex-direction: column;
@@ -13,13 +14,29 @@
     line-height: 121%;
 }
 
+.authform__error {
+    margin: auto 0 0;
+    color: #FF4062;
+    font-size: 10px;
+    line-height: 121%;
+    font-weight: 400;
+
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+}
+
+.authform__error_hidden {
+    display: none;
+}
+
 .authform__submit {
     width: 100%;
     background-color: #000;
     color: #fff;
     border: none;
     border-radius: 3px;
-    margin: auto 0 0;
+    margin: 10px 0 0;
     font-size: 14px;
     line-height: 121%;
     padding: 13px 0 15px;
@@ -27,9 +44,14 @@
     cursor: pointer;
 }
 
-.authform__submit:hover {
-    opacity: .7;
+.authform__submit:hover:enabled {
+    scale: 103% 105%;
     transition: .3s;
+}
+
+.authform__submit:disabled {
+    opacity: .4;
+    cursor: default;
 }
 
 .authform__bottomtext {
@@ -57,10 +79,57 @@
     transition: .3s;
 }
 
+.input {
+    min-height: 71px;
+    display: flex;
+    flex-direction: column;
+}
+
+.input-header {
+    font-size: 10px;
+    line-height: 121%;
+    margin: 0 0 5px;
+    color: #A0A0A0;
+}
+
+.input__input {
+    font-size: 14px;
+    line-height: 121%;
+    border: none;
+    border-bottom: 1px solid #E8E8E8;
+    padding-bottom: 10px;
+}
+
+.input__input:focus {
+    outline: none;
+    border: 0;
+    border-bottom: 1px solid #000;
+}
+
+.input__error_hidden {
+    display: none;
+}
+
+.input__error {
+    color: #FF4062;
+    font-size: 10px;
+    line-height: 121%;
+    font-weight: 400;
+    margin: 6px 0;
+
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+}
+
 @media screen and (max-width: 450px) {
     .authform {
         max-width: 396px;
         align-items: center;
         margin: 52px 30px 0;
+    }
+
+    .input {
+        width: 100%;
     }
 }
