--- a/src/components/MoviesPreloader/MoviesPreloader.css
+++ b/src/components/MoviesPreloader/MoviesPreloader.css
@@ -39,26 +39,16 @@
     }
 }
 
-.overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    background-color: rgba(255, 255, 255, .6);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
 .preloader {
-    display: flex;
+    /* display: flex; */
     align-items: center;
     justify-content: center;
-    width: 100%;
-    height: 100%;
+    /* width: 100%; */
+    /* height: 100%; */
     z-index: 10;
+    /* padding: 20px; */
     padding: 0;
+    margin: 0;
 }
 
 .preloader__container {
@@ -73,7 +63,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    background: #202020;
+    background: #000;
     border-radius: 50px;
 }
 
@@ -89,12 +79,12 @@
 }
 
 .preloader__round::after {
-    background: #fff;
+    background: white;
     animation: preloader-inside-white 1s ease-in-out infinite;
 }
 
 .preloader__round::before {
     z-index: 10;
-    background: #202020;
+    background: #000;
     animation: preloader-inside-red 1s ease-in-out infinite;
 }
